# surfjudge-actix

./: .dockerignore  .env  Cargo.toml  Dockerfile  Procfile  README.md  docker-compose.yml
config/: auth_rules.polar  settings.toml
nginx/: nginx-judging.conf  nginx.conf
src/: auth.rs  authentication.rs  authorization.rs  configuration.rs  database.rs  logging.rs  main.rs  notifier.rs  routes.rs  templates.rs  websocket_server.rs  websockets.rs
src/configuration/: mod.rs
src/endpoints/: auth.rs  base.rs  category.rs  config.rs  heat.rs  heat_advancement.rs  heat_state.rs  judge.rs  lycra_color.rs  mod.rs  page_index.rs  pages.rs  participation.rs  result.rs  score.rs  surfer.rs  tournament.rs
src/models/: category.rs  heat.rs  heat_advancement.rs  heat_state.rs  judge.rs  lycra_color.rs  mod.rs  participation.rs  permission.rs  preliminary_result.rs  result.rs  score.rs  surfer.rs  tournament.rs  user.rs
src/score_computation/: default_heat.rs  mod.rs  rsl_heat.rs
static/app/: main.css  main.js  main.js.LICENSE.txt
static/app-judging/: main.css  main.js
templates/: base_template.html  heatcharts.html  index-judging.html  index.html  live_results.html  results.html
