[package]
name = "surfjudge-actix"
version = "0.1.0"
authors = ["Dario Götz <dario.goetz@googlemail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix = "0.10"
actix-web = "^3.0"
actix-rt = "^1.1"
actix-files = "^0.4"
actix-cors = "^0.5"
actix-identity = "^0.3"
actix-web-actors = "^3.0"

sqlx = { version = "^0.4", default-features = false, features = [ "runtime-actix-rustls", "macros", "postgres", "chrono", "json" ] }

tera = "1"
chrono = { version="^0.4", features=[ "serde" ] }
futures = "^0.3"
anyhow = "^1.0"
thiserror = "^1.0"
config = "^0.10"
slog = "^2.5"
sloggers = "^1.0"
dotenv = "^0.15"
once_cell = "^1.4"
rand = "^0.8"
dashmap = "^4.0"
oso = "^0.8"
bcrypt = "^0.9"
zmq = "^0.9"
uuid = { version="^0.8", features=[ "serde", "v4"]}

serde = { version="^1.0", features=[ "derive" ]}
serde_json = "^1.0"
