[package]
name = "surfjudge-actix"
version = "0.1.0"
authors = ["Dario Götz <dario.goetz@googlemail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix = "0.13"
actix-web = "^4.0.0"
actix-rt = "^2.2"
actix-files = "^0.6.0"
actix-cors = "^0.6.0"
actix-identity = "^0.4.0"
actix-web-actors = "^4.0.0"

sqlx = { version = "^0.5", default-features = false, features = [ "runtime-actix-rustls", "macros", "postgres", "chrono", "json" ] }

serde = { version="^1.0", features=[ "derive" ]}
serde_json = "^1.0"

chrono = { version="^0.4", features=[ "serde" ] }
futures = "^0.3"
anyhow = "^1.0"
config = "^0.11"
slog = "^2.5"
sloggers = "^1.0"
dotenv = "^0.15"
once_cell = "^1.7"
rand = "^0.8"
dashmap = "^4.0"
oso = "^0.11"
bcrypt = "^0.9"
uuid = { version="^0.8", features=[ "serde", "v4"]}

zmq = { version = "^0.9", optional = true }
zeromq = { version = "^0.2", default-features = false, features = ["tokio-runtime"], optional = true }
tokio = { version = "^1.4", optional = true }

[features]
zmq-notifier-async = ["zeromq", "tokio"]
zmq-receiver-async = ["zeromq"]
zmq-notifier = ["zmq"]
zmq-receiver = ["zmq"]
